# task_Solana_2026

./: README.md
kozak-business/: Anchor.toml  Cargo.toml
kozak-business/programs/crafting/: Cargo.toml
kozak-business/programs/crafting/src/: lib.rs
kozak-business/programs/item_nft/: Cargo.toml
kozak-business/programs/item_nft/src/: lib.rs
kozak-business/programs/kozak-business/: Cargo.toml
kozak-business/programs/kozak-business/src/: lib.rs
kozak-business/programs/magic_token/: Cargo.toml
kozak-business/programs/magic_token/src/: lib.rs
kozak-business/programs/marketplace/: Cargo.toml
kozak-business/programs/marketplace/src/: lib.rs
kozak-business/programs/resource_manager/: Cargo.toml
kozak-business/programs/resource_manager/src/: lib.rs
kozak-business/programs/search/: Cargo.toml
kozak-business/programs/search/src/: lib.rs
kozak-business/tests/: kozak-business.ts
